--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   mongodb:
-    image: mongo
+    image: mongo:5.0.23
     ports:
       - "27017:27017"
     restart: always
